--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,10 @@ body {
   user-select: none;
 }
 
+.game-bg {
+  background-color: #00000078;
+}
+
 .magicpattern-default {
   width: 100%;
   height: 100%;
